# rearc-quest

./: README.md  brickflow-multi-project.yml
projects/rearc/: .brickflow-project-root.yml  .gitignore  Makefile  pyproject.toml
projects/rearc/spark/python/src/etl/: bls_sync.py  datausa_population_sync.py
projects/rearc/spark/python/src/notebooks/: data_analysis_gold_layer.ipynb  load_bronze_layer.ipynb  load_silver_layer.ipynb
projects/rearc/spark/python/src/resources/: profile.cfg
projects/rearc/workflows/: entrypoint.py  rearc_quest_workflow.py
